--- a/Guild Incremental/Assets/WebGLTemplates/Better2020/TemplateData/style.css
+++ b/Guild Incremental/Assets/WebGLTemplates/Better2020/TemplateData/style.css
@@ -18,6 +18,8 @@ body {
     height: 100%;
 }
 #unity-canvas {
+    min-width: 1024px;
+    min-height: 768px;
     width: 100%;
     height: 100%;
     background: {{{ BACKGROUND_COLOR }}};
